--- a/package.xml
+++ b/package.xml
@@ -51,15 +51,18 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>std_msgs</depend>
   <build_depend>ecse_373_ariac</build_depend>
+  <build_depend>ik_service</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rviz</build_depend>
   <build_depend>message_generation</build_depend>
   <build_export_depend>ecse_373_ariac</build_export_depend>
+  <build_export_depend>ik_service</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rviz</build_export_depend>
   <exec_depend>ecse_373_ariac</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rviz</exec_depend>
+  <exec_depend>ik_service</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
 
