--- a/package.xml
+++ b/package.xml
@@ -49,6 +49,7 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>actionlib</depend>
   <depend>std_msgs</depend>
   <build_depend>ecse_373_ariac</build_depend>
   <build_depend>ik_service</build_depend>
